kubernetes/applications/scheduler/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: scheduler
  namespace: applications

spec:
  podSelector:
    matchLabels:
      app: scheduler

  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: data
      ports:
        - protocol: TCP
          port: 5432

    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
